rails. uniendo ruta, controlador y vista

--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,5 @@
+<% #/*con este action unimos este html con el questions_controller*/ %>
 <form action="/answer">
-  <input type="text" name="question">
+  <input type="text" name="questions">
   <input type="submit" value="Ask!">
 </form>
