--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,3 +1,3 @@
-<p><%= @questions %></p> #con = muestra en el layout
+<p><%= @questions %></p>
 <p><%= @answer %></p>
 <p><%= link_to "Ask a new question", ask_path, :class => "link" %></p>
